Updated Homework and Python HW

--- a/Python Homework/Assignment 2/ProgHW2/ProgHW2-Updated_Aman.ipynb
+++ b/Python Homework/Assignment 2/ProgHW2/ProgHW2-Updated_Aman.ipynb
@@ -34,7 +34,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.3)\n"
+      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.3)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.12 -m pip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
@@ -72,20 +75,25 @@
     "        B[:, 1] = np.zeros_like(B[:, 1]) #zeros_like is similar to np.zeros but uses the dimension of input array\n",
     "    # Now we need to repeat the process for remaining columns\n",
     "    # Insert your code here. you can do it in 2 lines or one line\n",
+    "    \n",
     "    B[:, 2] = B[:, 2] - B[:, 2] @ B[:, 0] * B[:, 0] - B[:, 2] @ B[:, 1] * B[:, 1]\n",
     "    \n",
     "    # Again we'll need to normalise our new vector.\n",
     "    # Repeat what we had done earlier\n",
+    "    \n",
     "    if la.norm(B[:, 2]) > tol :\n",
     "        B[:, 2] = B[:, 2] / la.norm(B[:, 2])\n",
     "    else :\n",
-    "        B[:, 2] = np.zeros_like(B[:, 2])\n",
+    "        B[:, 2] = np.zeros_like(B[:, 2]) \n",
+    "    \n",
     "    \n",
     "    # Finally, column three:\n",
     "    # Insert your code here. either one line or three lines\n",
+    "    \n",
     "    B[:, 3] = B[:, 3] - B[:, 3] @ B[:, 0] * B[:, 0] - B[:, 3] @ B[:, 1] * B[:, 1] - B[:, 3] @ B[:, 2] * B[:, 2]\n",
     "    \n",
     "    # Now normalise if possible\n",
+    "    \n",
     "    if la.norm(B[:, 3]) > tol :\n",
     "        B[:, 3] = B[:, 3] / la.norm(B[:, 3])\n",
     "    else :\n",
@@ -102,16 +110,18 @@
     "        # Inside that loop, loop over all previous vectors, j, to subtract.\n",
     "        for j in range(i) :\n",
     "            # Complete the code\n",
+    "            \n",
     "            B[:, i] = B[:, i] - B[:, i] @ B[:, j] * B[:, j]\n",
     "            \n",
     "        # Next insert code to do the normalisation test for B[:, i]\n",
+    "        \n",
     "        if la.norm(B[:, i]) > tol :\n",
     "            B[:, i] = B[:, i] / la.norm(B[:, i])\n",
     "        else :\n",
-    "            B[:, i] = np.zeros_like(B[:, i]) \n",
+    "            B[:, i] = np.zeros_like(B[:, i])\n",
     "            \n",
     "    # Finally, we return the result:\n",
-    "    return B\n"
+    "    return B"
    ]
   },
   {
@@ -482,13 +492,13 @@
    "outputs": [],
    "source": [
     " # We'll call this one L2, to distinguish it from the previous L.\n",
-    "L2 = np.array([[0.0, 1/2, 1/3, 0.0, 0.0, 0.0, 0.0],\n",
-    "               [1/3, 0.0, 0.0, 0.0, 1/2, 0.0, 0.0],\n",
-    "               [1/3, 1/2, 0.0, 1.0, 0.0, 0.0, 0.0],\n",
-    "               [1/3, 0.0, 1/3, 0.0, 1/2, 1.0, 0.0],\n",
-    "               [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0],\n",
-    "               [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0],\n",
-    "               [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0]])"
+    "L2 = np.array([[0.0, 1/2, 1/3, 0.0, 0.0, 0.0, 0.0 ],\n",
+    "               [1/3, 0.0, 0.0, 0.0, 1/2, 0.0, 0.0 ],\n",
+    "               [1/3, 1/2, 0.0, 1.0, 0.0, 1/3, 0.0 ],\n",
+    "               [1/3, 0.0, 1/3, 0.0, 1/2, 1/3, 0.0 ],\n",
+    "               [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ],\n",
+    "               [0.0, 0.0, 1/3, 0.0, 0.0, 0.0, 0.0 ],\n",
+    "               [0.0, 0.0, 0.0, 0.0, 0.0, 1/3, 1.0 ]])"
    ]
   },
   {
@@ -500,14 +510,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44 iterations to convergence.\n"
+      "131 iterations to convergence.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.01788308, 0.0069765 , 0.03537551, 0.0207771 , 0.        ,\n",
-       "       0.        , 0.02431653])"
+       "array([ 0.03046998,  0.01064323,  0.07126612,  0.04423198,  0.        ,\n",
+       "        0.02489342, 99.81849527])"
       ]
      },
      "execution_count": 13,
@@ -566,14 +576,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "170 iterations to convergence.\n"
+      "8 iterations to convergence.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.12175201, 0.09979288, 0.19435182, 0.16538834, 0.06278276,\n",
-       "       0.06278276, 0.14782631])"
+       "array([13.68217054, 11.20902965, 22.41964343, 16.7593433 ,  7.14285714,\n",
+       "       10.87976354, 17.90719239])"
       ]
      },
      "execution_count": 15,
@@ -624,10 +634,17 @@
    "source": [
     "# Input link matrix L (which can be generated using the code given below) and damping factor d.\n",
     "def pageRank(L, d) :\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    return r\n"
+    "    N=L.shape[0]\n",
+    "    M = d * L + (1-d)/N * np.ones([N,N])\n",
+    "    r = 100 * np.ones(N) / N \n",
+    "    lastR = r\n",
+    "    r = M @ r\n",
+    "    i=0\n",
+    "    while la.norm(lastR - r) > 0.01 :\n",
+    "        lastR = r\n",
+    "        r = M @ r\n",
+    "        i+=1\n",
+    "    return r"
    ]
   },
   {
@@ -652,11 +669,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[1. , 0. , 0.5, 0. , 0.2],\n",
-       "       [0. , 0. , 0.5, 0. , 0.2],\n",
-       "       [0. , 0. , 0. , 0. , 0.2],\n",
-       "       [0. , 1. , 0. , 0.5, 0.2],\n",
-       "       [0. , 0. , 0. , 0.5, 0.2]])"
+       "array([[0. , 0.2, 0. , 0. , 1. ],\n",
+       "       [0.5, 0.2, 0.5, 0. , 0. ],\n",
+       "       [0. , 0.2, 0.5, 0. , 0. ],\n",
+       "       [0. , 0.2, 0. , 1. , 0. ],\n",
+       "       [0.5, 0.2, 0. , 0. , 0. ]])"
       ]
      },
      "execution_count": 18,
@@ -687,8 +704,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0.12175201, 0.09979288, 0.19435182, 0.16538834, 0.06278276,\n",
-       "       0.06278276, 0.14782631])"
+       "array([[0.2, 0. , 0. , 0. , 0. ],\n",
+       "       [0.2, 0. , 0. , 0. , 0. ],\n",
+       "       [0.2, 1. , 0. , 0. , 0. ],\n",
+       "       [0.2, 0. , 1. , 0. , 0.5],\n",
+       "       [0.2, 0. , 0. , 1. , 0.5]])"
       ]
      },
      "execution_count": 20,
@@ -697,7 +717,7 @@
     }
    ],
    "source": [
-    "pageRank(L, 1)"
+    "L"
    ]
   },
   {
@@ -708,10 +728,30 @@
     {
      "data": {
       "text/plain": [
-       "array([99.99999988,  0.00000002,  0.00000002,  0.00000007,  0.00000002])"
+       "array([ 0.00000001,  0.00000001,  0.00000004, 33.33478656, 66.66521338])"
       ]
      },
      "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pageRank(L, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00000001,  0.00000001,  0.00000002, 33.33333333, 66.66666663])"
+      ]
+     },
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,11 +769,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At the beginning of the PageRank calculation, we start with a set of initial values. \n",
+      "Making tiny changes in how we choose these initial values can affect how the PageRank algorithm finds its final values. \n",
+      "When we add a new link to a website, it can change how important certain pages are in the eyes of the PageRank algorithm.\n"
+     ]
+    }
+   ],
    "source": [
-    "#your answers do not match always. Why?"
+    "#your answers do not match always. Why?\n",
+    "print(\"At the beginning of the PageRank calculation, we start with a set of initial values. \\nMaking tiny changes in how we choose these initial values can affect how the PageRank algorithm finds its final values. \\nWhen we add a new link to a website, it can change how important certain pages are in the eyes of the PageRank algorithm.\")"
    ]
   },
   {
